changed hero section styling and fixed alignment

--- a/components/ui/Hero/Hero.module.css
+++ b/components/ui/Hero/Hero.module.css
@@ -1,5 +1,5 @@
 .root {
-  @apply flex flex-col py-32;
+  @apply flex flex-col py-32 justify-center;
 
   @screen md {
     @apply flex-row;
@@ -7,7 +7,7 @@
 }
 
 .headline {
-  @apply text-4xl leading-10 font-extrabold text-white sm:text-5xl sm:leading-none sm:tracking-tight lg:text-6xl;
+  @apply flex-1 max-w-xl text-4xl leading-10 font-extrabold text-white sm:text-5xl sm:leading-none sm:tracking-tight lg:text-6xl;
 }
 
 .description {
